; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_string.c_ngx_http_lua_ngx_unescape_uri.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_string.c_ngx_http_lua_ngx_unescape_uri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"expecting one argument\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@NGX_UNESCAPE_URI_COMPONENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ngx_http_lua_ngx_unescape_uri to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_http_lua_ngx_unescape_uri(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @lua_gettop(i32* %9)
  %11 = icmp ne i32 %10, 1
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @luaL_error(i32* %13, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %2, align 4
  br label %45

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = call i64 @lua_isnil(i32* %16, i32 1)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @lua_pushliteral(i32* %20, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %45

22:                                               ; preds = %15
  %23 = load i32*, i32** %3, align 8
  %24 = call i64 @luaL_checklstring(i32* %23, i32 1, i64* %4)
  %25 = inttoptr i64 %24 to i32*
  store i32* %25, i32** %7, align 8
  %26 = load i64, i64* %4, align 8
  store i64 %26, i64* %5, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = load i64, i64* %5, align 8
  %29 = call i32* @lua_newuserdata(i32* %27, i64 %28)
  store i32* %29, i32** %6, align 8
  %30 = load i32*, i32** %6, align 8
  store i32* %30, i32** %8, align 8
  %31 = load i64, i64* %4, align 8
  %32 = load i32, i32* @NGX_UNESCAPE_URI_COMPONENT, align 4
  %33 = call i32 @ngx_http_lua_unescape_uri(i32** %8, i32** %7, i64 %31, i32 %32)
  %34 = load i32*, i32** %3, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = bitcast i32* %35 to i8*
  %37 = load i32*, i32** %8, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = ptrtoint i32* %37 to i64
  %40 = ptrtoint i32* %38 to i64
  %41 = sub i64 %39, %40
  %42 = sdiv exact i64 %41, 4
  %43 = trunc i64 %42 to i32
  %44 = call i32 @lua_pushlstring(i32* %34, i8* %36, i32 %43)
  store i32 1, i32* %2, align 4
  br label %45

45:                                               ; preds = %22, %19, %12
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i64 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1

declare dso_local i64 @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32* @lua_newuserdata(i32*, i64) #1

declare dso_local i32 @ngx_http_lua_unescape_uri(i32**, i32**, i64, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
